[Udpate Feature] Breadcrumbs

--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -6,6 +6,14 @@
   color: #293a49;
 }
 
+/********LINKS********/
+.url:hover{
+    text-decoration: none;
+    color: black;
+}
+/************************/
+
+
 /********** HEADER **********/
 
 /*#header-bar{
