--- a/app/views/academy/index.html.erb
+++ b/app/views/academy/index.html.erb
@@ -1,1 +1,4 @@
+<ol class="breadcrumb" id="breadcrumbAds">
+  <li class="active"><a class="url" href="<%= academy_path %>"><i class="fa fa-tags"></i> Academia</a></li>
+</ol>
 algo bonito
