--- a/app/views/academy/questions/index.html.erb
+++ b/app/views/academy/questions/index.html.erb
@@ -1,3 +1,12 @@
+<ol class="breadcrumb" id="breadcrumbAds">
+  <li class="active">
+    <a class="url" href="<%= academy_path %>"><i class="fa fa-tags"></i> Academia</a> >
+    <% if user_signed_in? %>
+        <a class="url" href="<%= academy_questions_path %>">Perguntas</a> </li>
+        <%= link_to 'Nova Pergunta', new_academy_question_path,:class=> "url", style:"float:right"%>
+    <% end %>
+</ol>
+
 <div class="well well-sm">
     <strong>Filtrar por: </strong>
     <div class="btn-group">
@@ -64,6 +73,4 @@
        </section>
 </div>
 </div>
-
-<%= link_to 'Nova questão', new_academy_question_path,:class=> "btn btn-info" %>
 
