--- a/app/views/ads/new.html.erb
+++ b/app/views/ads/new.html.erb
@@ -1,3 +1,14 @@
+<div>
+  <ol class="breadcrumb" id="breadcrumbAds">
+    <li class="active">
+      <a class="url" href="<%= ads_path %>"><i class="fa fa-tags"></i> Anúncios</a></li>
+      <% if user_signed_in? %>
+        <a class="url" href="<%= myads_user_path(current_user.id) %>"> > Os meus Anúncios</a></li> >
+        <%= link_to "Novo Anúncio", new_ad_path, class:"url" %>
+      <% end %>
+  </ol>
+</div>
+
 <div class="panel">
     <div class="panel-heading border-header">
             <h3 class="panel-title">Novo Anúncio</h3>
@@ -8,5 +19,3 @@
 
 	</div>
 </div>
-
-<%= link_to 'Voltar', myads_user_path(current_user.id) %>
