--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -53,6 +53,7 @@
                </div>
                <% i+=1 %>
                <% end %>
+              <!--  
                <ol class="carousel-indicators">
                   <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                   <% i=1 %>
@@ -61,8 +62,9 @@
                   <% i+=1 %>
                   <% end %>
                </ol>
-               <a class="carousel-control left" href="#imageCarousel" data-slide="prev" style="top: 50%">&lsaquo;</a>
-               <a class="carousel-control right" href="#imageCarousel" data-slide="next" style="top: 50%">&rsaquo;</a>
+               -->
+          <!--  <a class="carousel-control left" href="#imageCarousel" data-slide="prev" style="top: 50%">&lsaquo;</a> -->
+          <!--     <a class="carousel-control right" href="#imageCarousel" data-slide="next" style="top: 50%">&rsaquo;</a>-->
             </div>
          </div>
          <div class="ads_otherimg_section">
