--- a/app/views/academy/questions/_question.html.erb
+++ b/app/views/academy/questions/_question.html.erb
@@ -1,3 +1,13 @@
+<ol class="breadcrumb" id="breadcrumbAds">
+  <li class="active">
+    <a class="url" href="<%= academy_path %>"><i class="fa fa-tags"></i> Academia</a></li>
+    <a class="url" href="<%= academy_questions_path %>"> > Perguntas</a>
+  <a class="url" href="<%= academy_question_path(@academy_question.id) %>"> > <%= @academy_question.title %></a>
+  </li>
+  <% if user_signed_in? %>
+      <%= link_to 'Nova Pergunta', new_academy_question_path,:class=> "url", style:"float:right"%>
+  <% end %>
+</ol>
 
 <div class="col-lg-12">
   <section class="panel">
