--- a/app/views/ads/edit.html.erb
+++ b/app/views/ads/edit.html.erb
@@ -1,3 +1,10 @@
+<ol class="breadcrumb" id="breadcrumbAds">
+  <li class="active">
+    <a class="url" href="<%= ads_path %>"><i class="fa fa-tags"></i> Anúncios</a>
+    <a class="url" href="<%= ad_path(@ad.id) %>"> > <%= @ad.title %>></a>
+  </li>
+</ol>
+
 <div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title">Editar Anúncio</h3>
