--- a/app/views/academy/tutorials/show.html.erb
+++ b/app/views/academy/tutorials/show.html.erb
@@ -1,5 +1,21 @@
 <p id="notice"><%= notice %></p>
 
+<ol class="breadcrumb" id="breadcrumbAds">
+  <li class="active">
+    <a class="url" href="<%= academy_path %>"><i class="fa fa-tags"></i> Academia</a>
+    <a class="url" href="<%= academy_tutorials_path %>"> > Tutoriais</a>
+    <a class="url" href="<%= academy_tutorial_path(@academy_tutorial.id) %>"> > <%= @academy_tutorial.title %></a>
+  </li>
+  <div style="float:right">
+    <% if user_signed_in? && current_user.id == @academy_tutorial.user_id %>
+        <div class="ui-group-buttons">
+          <%= link_to '<i class="fa  fa-edit"></i>'.html_safe, edit_academy_tutorial_path(@academy_tutorial),:class=>"btn btn-info", :tile=> "Editar Tutorial" %>
+          <div class="or"></div>
+          <%= link_to '<i class="fa fa fa-trash-o"></i>'.html_safe, @academy_tutorial, method: :delete, data: { confirm: 'Tem a certeza que quer apagar o seu tutorial?' } ,:class=>"btn btn-danger", :tile=> "Apagar Tutorial"%>
+        </div>
+    <% end %>
+  </div>
+</ol>
 
 <div class="col-lg-12">
           <section class="panel">
@@ -32,8 +48,3 @@
           </div>
       </section>
     </div>
-
-<% if user_signed_in? && current_user.id == @academy_tutorial.user_id %>
-    <%= link_to 'Editar', edit_academy_tutorial_path(@academy_tutorial) %> |
-<% end %>
-<%= link_to 'Voltar', academy_tutorials_path %>
