--- a/app/views/ads/edit.html.erb
+++ b/app/views/ads/edit.html.erb
@@ -1,7 +1,7 @@
 <ol class="breadcrumb" id="breadcrumbAds">
   <li class="active">
     <a class="url" href="<%= ads_path %>"><i class="fa fa-tags"></i> Anúncios</a>
-    <a class="url" href="<%= ad_path(@ad.id) %>"> > <%= @ad.title %>></a>
+    <a class="url" href="<%= ad_path(@ad.id) %>"> > <%= @ad.title %></a>
   </li>
 </ol>
 
@@ -15,6 +15,3 @@
 
     </div>
 </div>
-
-<%= link_to 'Show', @ad %> |
-<%= link_to 'Back', myads_user_path(current_user.id) %>
