--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,3 +1,10 @@
+<ol class="breadcrumb" id="breadcrumbAds">
+  <li class="active">
+    <a class="url" href="<%= ratings_path %>"><i class="fa fa-tags"></i> Avaliações</a>
+  </li>
+</ol>
+
+
 <% if @rating.count != 0 %>
 <table class="table">
 	<tr>
