--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -40,7 +40,7 @@
                 <div class="bio-row">
 
 
-                    <p><span>Ocupação</span>: <%= @user.ocupation %></p>
+                    <p><span>Ocupação</span>: <%= @user %></p>
 
                 </div>
                 <div class="bio-row">
