--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -136,18 +136,33 @@
           <div class="col-lg-4">
             <div class="panel panel-primary">
               <div class="panel-heading">
-                <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Stats Utilizadores</h3>
+                <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Stats Anúncios</h3>
               </div>
               <div class="panel-body">
-                <% pie_chart( @dashboard.ads_per_category ) %>
-              <%= pie_chart({"Agricultores" => 20, "Pesca" => 5,"Caça" => 15}) %>
-               <% pie_chart User.group("name").count %>
+                <%= pie_chart( @dashboard.ads_per_category ) %>
                 <div class="text-right">
                   <a href="#">View Details <i class="fa fa-arrow-circle-right"></i></a>
                 </div>
               </div>
             </div>
           </div>
+
+          <div class="col-lg-4">
+            <div class="panel panel-primary">
+              <div class="panel-heading">
+                <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Stats Utilizadores</h3>
+              </div>
+              <div class="panel-body">
+                <%= pie_chart( @dashboard.users_per_district ) %>
+               <% pie_chart User.group("city").count %>
+                <div class="text-right">
+                  <a href="#">View Details <i class="fa fa-arrow-circle-right"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
           <div class="col-lg-4">
             <div class="panel panel-primary">
               <div class="panel-heading">
@@ -204,10 +219,11 @@
                   <table class="table table-bordered table-hover table-striped tablesorter">
                     <thead>
                       <tr>
-                        <th>Order # <i class="fa fa-sort"></i></th>
-                        <th>Order Date <i class="fa fa-sort"></i></th>
-                        <th>Order Time <i class="fa fa-sort"></i></th>
-                        <th>Amount (USD) <i class="fa fa-sort"></i></th>
+                        <th>Anúncio # <i class="fa fa-sort"></i></th>
+                        <th>Vendedor <i class="fa fa-sort"></i></th>
+                        <th>Comprador <i class="fa fa-sort"></i></th>
+                        <th>Data <i class="fa fa-sort"></i></th>
+                        <th>Hora <i class="fa fa-sort"></i></th>
                       </tr>
                     </thead>
                     <tbody>
@@ -229,36 +245,7 @@
                         <td>3:03 PM</td>
                         <td>$724.17</td>
                       </tr>
-                      <tr>
-                        <td>3323</td>
-                        <td>10/21/2013</td>
-                        <td>3:00 PM</td>
-                        <td>$23.71</td>
-                      </tr>
-                      <tr>
-                        <td>3322</td>
-                        <td>10/21/2013</td>
-                        <td>2:49 PM</td>
-                        <td>$8345.23</td>
-                      </tr>
-                      <tr>
-                        <td>3321</td>
-                        <td>10/21/2013</td>
-                        <td>2:23 PM</td>
-                        <td>$245.12</td>
-                      </tr>
-                      <tr>
-                        <td>3320</td>
-                        <td>10/21/2013</td>
-                        <td>2:15 PM</td>
-                        <td>$5663.54</td>
-                      </tr>
-                      <tr>
-                        <td>3319</td>
-                        <td>10/21/2013</td>
-                        <td>2:13 PM</td>
-                        <td>$943.45</td>
-                      </tr>
+                
                     </tbody>
                   </table>
                 </div>
