--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -93,8 +93,8 @@
 
             <hr>
         <!--ZONA DA ACADEMIA -->
-                 <a href="#legal-menu" class="nav-header" data-toggle="collapse"><i class="fa fa-quote-left"></i>Tutoriais</a>
-                  <ul id="legal-menu" class="nav nav-list collapse">
+                 <a href="#academy-menu" class="nav-header" data-toggle="collapse"><i class="fa fa-quote-left"></i>Tutoriais</a>
+                  <ul id="academy-menu" class="nav nav-list collapse">
                       <li> 
                        <%= link_to "<i class='fa fa-eye'></i>Ver tutoriais".html_safe  , admin_academy_tutorials_path %>
                       </li>
@@ -102,6 +102,19 @@
 
             <hr>
       <!-- FIM ZONA DA ACADEMIA -->
+           <a href="#events-menu" class="nav-header" data-toggle="collapse"><i class="fa fa-quote-left"></i>Eventos</a>
+                  <ul id="events-menu" class="nav nav-list collapse">
+                      <li> 
+                       <%= link_to "<i class='fa fa-eye'></i>Ver eventos".html_safe  , admin_event_events_path %>
+                      </li>
+                  </ul>
+
+            <hr>
+
+      <!-- ZONA DOS EVENTOS -->
+
+
+      <!-- FIM DA ZONA DOS EVENTOS -->
         
 
             <a href="/" class="nav-header" >
