--- a/app/views/admin/academy/questions/index.html.erb
+++ b/app/views/admin/academy/questions/index.html.erb
@@ -1,25 +1,40 @@
-<h1>Listing admin_academy_questions</h1>
+<h1>Lista de Perguntas</h1>
 
-<table>
-  <thead>
+<table class="table">
     <tr>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th>ID</th>
+      <th>Pergunta</th>
+      <th>ID Autor</th>
+      <th>Categoria</th>
+      <th>Criado em</th>
     </tr>
-  </thead>
 
-  <tbody>
     <% @admin_academy_questions.each do |admin_academy_question| %>
+
       <tr>
-        <td><%= link_to 'Show', admin_academy_question %></td>
-        <td><%= link_to 'Edit', edit_admin_academy_question_path(admin_academy_question) %></td>
-        <td><%= link_to 'Destroy', admin_academy_question, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= admin_academy_question.id %></td>
+        <td><%= admin_academy_question.title %></td>
+        <td><%= admin_academy_question.user_id %></td>
+        <td>
+              <% if admin_academy_question.category %>
+                <span class="label" style="background-color: #<%= admin_academy_question.category.color %>">
+                  <%= admin_academy_question.category.name %>
+                </span>
+
+                <% else %>
+                   <span class="label label-default" >
+                    Sem Categoria
+                  </span>
+              <% end %>
+            </td>
+        <td><%= admin_academy_question.created_at %></td>
+        <td><%= link_to 'Ver', admin_academy_question %></td>
+        <td><%= link_to 'Editar', edit_admin_academy_question_path(admin_academy_question) %></td>
+        <td><%= link_to 'Apagar', admin_academy_question, method: :delete, data: { confirm: 'Tem a certeza?' } %></td>
       </tr>
     <% end %>
-  </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Question', new_admin_academy_question_path %>
+<%= link_to 'Nova pergunta', new_admin_academy_question_path %>
