--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,9 +1,5 @@
 
-            <h1>Dashboard <small>Statistics Overview</small></h1>
-            <ol class="breadcrumb">
-              <li class="active"><i class="fa fa-dashboard"></i> Dashboard</li>
-            </ol>
-           
+            <h1>Dashboard <small>Statistics Overview</small></h1>           
           </div>
         </div><!-- /.row -->
 
@@ -13,7 +9,7 @@
               <div class="panel-heading">
                 <div class="row">
                   <div class="col-xs-6">
-                    <i class="fa fa-comments fa-5x"></i>
+                    <i class="fa fa-shopping-cart fa-5x"></i>
                   </div>
                   <div class="col-xs-6 text-right">
                     <p class="announcement-heading"><%= @dashboard.today_ads_count %></p>
@@ -40,7 +36,7 @@
               <div class="panel-heading">
                 <div class="row">
                   <div class="col-xs-6">
-                    <i class="fa fa-check fa-5x"></i>
+                    <i class="fa fa-users fa-5x"></i>
                   </div>
                   <div class="col-xs-6 text-right">
                     <p class="announcement-heading"><%= @dashboard.today_users_count%></p>
@@ -67,7 +63,7 @@
               <div class="panel-heading">
                 <div class="row">
                   <div class="col-xs-6">
-                    <i class="fa fa-tasks fa-5x"></i>
+                    <i class="fa fa-question-circle fa-5x"></i>
                   </div>
                   <div class="col-xs-6 text-right">
                     <p class="announcement-heading"><%= @dashboard.today_questions_count %></p>
@@ -94,7 +90,7 @@
               <div class="panel-heading">
                 <div class="row">
                   <div class="col-xs-6">
-                    <i class="fa fa-comments fa-5x"></i>
+                    <i class="fa fa-calendar fa-5x"></i>
                   </div>
                   <div class="col-xs-6 text-right">
                     <p class="announcement-heading"><%= @dashboard.today_events_count %></p>
@@ -122,7 +118,7 @@
           <div class="col-lg-12">
             <div class="panel panel-primary">
               <div class="panel-heading">
-                <h3 class="panel-title"><i class="fa fa-money"></i> Últimos Anúncios</h3>
+                <h3 class="panel-title"><i class="fa fa-shopping-cart"></i> Últimos Anúncios</h3>
               </div>
               <div class="panel-body">
                 <div class="table-responsive">
@@ -144,7 +140,7 @@
                         <td><%= a.id %></td>
                         <td><%= a.title %></td>
                         <td><%= a.user_id %></td>
-                        <td><%= a.category_id %></td>
+                        <td><%= a.category.name %></td>
                         <td><%= a.price %></td>
                         <td><%= a.created_at %></td>
                         <td><%= a.created_at %></td>
