--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -4,11 +4,12 @@
   <table class="table table-hover" >
       <thead>
     <tr>
+      <th>Avatar</th>
+      <th>ID</th>
       <th>Nome</th>
       <th>Email</th>
       <th>Cidade</th>
-      <th>Estado</th>
-      <th>Type</th>
+      <th>Tipo</th>
       <th></th>
       <th></th>
       <th></th>
@@ -18,13 +19,16 @@
   <tbody>
     <% @admin_users.each do |user| %>
       <tr>
-        <td> <%=link_to image_tag(user.avatar.url(:medium),:width => "70%",:class => "img-circle"), user %>
-        </td>
+        <td> <%=link_to image_tag(user.avatar.url(:tiny),:class => "img-circle"), user %></td>
+        <td><%= user.id %></td>
         <td><%= user.name %></td>
         <td><%= user.email %></td>
         <td><%= user.city.city %></td>
-        <td>ESTADO???</td>
-        <td><%= user.user_type %></td>
+        <% if user.user_type==2 %>
+        <td>Admin</td>
+        <% else %>
+        <td>User</td>
+        <% end %>
         <td><%= link_to 'Ver', admin_user_path(user) %></td>
         <td><%= link_to 'Editar', edit_admin_user_path(user) %></td>
         <td><%= link_to 'Eliminar', admin_user_path(user), method: :delete, data: { confirm: 'Tem a certeza?' } %></td>
