--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,18 +25,81 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-search" id="fa-search"></i><b class="caret" id="dropCarret"></b> </a>
         <ul class="dropdown-menu">
           <li class="container" id="searchBox" role="search">
-            <form class="input-group" id="input-groupBox">
-              <input type="text" name="search" style="vertical-align: center;" class="form-control typeahead" value="<%= params[:search] %>">
-              
+
+            <%= form_tag "/search", :method => "get",:html =>{ :class=>"input-group", :id => "input-groupBox"} do %>
+              <%= text_field_tag :search, params[:search],:class => "form-control typeahead" ,:style=>"vertical-align: center;",:autocomplete => "off"  %>
+             <input type="hidden" class="span1" name="IdControl" id="IdControl" value="" />
+
               <span class="input-group-btn">
-                <input value="Pesquisar" type="submit" class="btn btn-default" id="omnisearch-btn" >
+                <input value="Pesquisar" type="hidden" class="btn btn-default" id="omnisearch-btn" >
               </span>
-            </form>
+            <% end %>
           </li>
         </ul>
       </li>
       <!-- END SEARCH -->
+     
+      <!-- END SEARCH -->
+       <script type="text/javascript">
+           $(function(){
+                //window.query_cache = {};
+                var labels = [];
+                var mapped = {}; 
+                $('.typeahead').typeahead({
+                  source: function (query, process) {
+                    labels = [];
+                    mapped = {}; 
+                     return $.ajax({
+                      url: "/search",
+                      type: 'get',
+                      data: { query: query },
+                      dataType: 'json',
+                      success: function (result) {
 
+
+                        $.each(result, function (i, item) {
+                           mapped[item.title] = {
+                                id: item.id,
+                                title: item.title,
+                                category: item.category,
+                                img: item.img
+                           }
+                           labels.push(item.title)
+
+                          //alert(item.id + item.title)
+
+                        });
+                        return process(labels);
+
+                      }
+                  });
+                },
+                 highlighter: function(item){
+                    var p = mapped[item];
+                    var itm = ''
+                             + "<div class='typeahead_wrapper'>"
+                             + "<img class='typeahead_photo' src='"+ p.img +"' />"
+                             + "<div class='typeahead_labels'>"
+                             + "<div class='typeahead_primary'>" + p.title + "</div>"
+                             + "<div class='typeahead_secondary'>" + p.category + "</div>"
+                             + "</div>"
+                             + "</div>";
+                    return itm;
+                },
+                 updater: function ( item ) {
+                    //save the id value into the hidden field
+                    $( "#IdControl" ).val( mapped[item].id );
+                    //return the string you want to go into the textbox (the name)
+                    //alert(item)
+                    return item;
+                }
+              }); 
+                 
+          });
+
+          
+      </script>
+    
 
       <!-- NOTIFICACOES -->
       <% if user_signed_in? %>
