--- a/app/views/academy/workshops/edit.html.erb
+++ b/app/views/academy/workshops/edit.html.erb
@@ -1,6 +1,19 @@
-<h1>Editing academy_workshop</h1>
+<ol class="breadcrumb" id="breadcrumbAds">
+  <li class="active">
+    <a class="url" href="<%= academy_workshops_path %>"><i class="fa fa-tags"></i> Workshops</a>
+    <% if user_signed_in? %>
+        <%= link_to ' > Novo Workshop', new_academy_workshop_path,:class=> "url"%>
+    <% end %>
+  </li>
+</ol>
 
-<%= render 'form' %>
+<div class="panel">
+  <div class="panel-heading border-header">
+    <h3 class="panel-title">Editar Workshop</h3>
+  </div>
+  <div class="panel-body">
 
-<%= link_to 'Show', @academy_workshop %> |
-<%= link_to 'Back', academy_workshops_path %>
+    <%= render 'form' %>
+
+  </div>
+</div>
