--- a/app/views/event/events/new.html.erb
+++ b/app/views/event/events/new.html.erb
@@ -1,5 +1,19 @@
-<h1>New event_event</h1>
+<ol class="breadcrumb" id="breadcrumbAds">
+  <li class="active">
+    <a class="url" href="<%= event_events_path %>"><i class="fa fa-tags"></i> Eventos</a>
+    <% if user_signed_in? %>
+        <%= link_to ' > Novo Evento', new_event_event_path,:class=> "url"%>
+    <% end %>
+  </li>
+</ol>
 
-<%= render 'form' %>
+<div class="panel">
+  <div class="panel-heading border-header">
+    <h3 class="panel-title">Novo Evento</h3>
+  </div>
+  <div class="panel-body">
 
-<%= link_to 'Back', event_events_path %>
+    <%= render 'form' %>
+
+  </div>
+</div>
