[Update feature] Breadcrumbs

--- a/app/views/academy/workshops/edit.html.erb
+++ b/app/views/academy/workshops/edit.html.erb
@@ -1,10 +1,12 @@
 <ol class="breadcrumb" id="breadcrumbAds">
   <li class="active">
     <a class="url" href="<%= academy_workshops_path %>"><i class="fa fa-tags"></i> Workshops</a>
+    <a class="url" href="<%= event_event_path(@academy_workshop.id) %>"> > <%= @academy_workshop.title %></a></li>
+  <div style="float:right">
     <% if user_signed_in? %>
-        <%= link_to ' > Novo Workshop', new_academy_workshop_path,:class=> "url"%>
+        <%= link_to 'Novo Workshop', new_academy_workshop_path,:class=> "url"%>
     <% end %>
-  </li>
+  </div>
 </ol>
 
 <div class="panel">
