--- a/app/views/academy/workshop_registrations/_form.html.erb
+++ b/app/views/academy/workshop_registrations/_form.html.erb
@@ -16,8 +16,7 @@
     <%= f.number_field :workshop_id ,:value=> @academy_workshop.id%>
   </div>
   <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id ,:value=> current_user.id%>
+    <%= f.hidden_field :user_id ,:value=> current_user.id%>
   </div>
 
   <div class="actions pull-right">
