--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -62,6 +62,7 @@
                                 id: item.id,
                                 title: item.title,
                                 category: item.category,
+                                tipo: item.tipo,
                                 img: item.img
                            }
                            labels.push(item.title)
@@ -81,7 +82,7 @@
                              + "<img class='typeahead_photo' src='"+ p.img +"' />"
                              + "<div class='typeahead_labels'>"
                              + "<div class='typeahead_primary'>" + p.title + "</div>"
-                             + "<div class='typeahead_secondary'>" + p.category + "</div>"
+                             + "<div class='typeahead_secondary'>" + p.category + " | "+ p.tipo +"</div>"
                              + "</div>"
                              + "</div>";
                     return itm;
